--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -13,7 +13,7 @@ People can color patterns with a variety of different criteria in mind, which ma
 
 \paragraph{Automatic pattern coloring} In the most direct application of our framework, we can sample from our model to produce colorings for a pattern template that are similar to the colorings used for training. Figure~\ref{fig:teaser} shows two examples of this process. The sampled patterns exhibit a range of colors and styles employed by the COLOURLovers artists. For comparison, the same patterns colored with palettes randomly sampled from RGB-space are shown on the right. These patterns exhibit significant problems, such as low color harmony and adjacent regions with equi-luminant colors.
 
-\begin{figure}[t!]
+\begin{figure}[t]
 \begin{tabular}{cccc} 
 \raisebox{0.5em}{\includegraphics[width=.275\columnwidth]{figs/photos/brick}}&
 \includegraphics[width=.65\columnwidth]{figs/photos/brickAll}\\
@@ -28,13 +28,7 @@ People can color patterns with a variety of different criteria in mind, which ma
 
 \paragraph{Coloring with fixed palettes} 
 
-Artists often draw inspiration from inspirational photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors to different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
-
-Figure~\ref{fig:photographMatching} shows an example where colors from two photographs are applied to different pattern templates. A color palette is first automatically extracted from the input photograph~\cite{SharonPaletteExtraction}. Our algorithm then automatically computes a pleasing mapping from the colors in the extracted palette to regions in a given pattern template.
-%~\remark{Comment on e.g. why does it use white for the background?} 
-
-
-\begin{figure*}[ht!]
+\begin{figure*}[ht]
 \begin{tabular}{ccc}
 \raisebox{1.2em}{\includegraphics[width=.15\linewidth]{figs/permutationTemplateBird}} & \includegraphics[width=.39\linewidth]{figs/permutationBest3} & \includegraphics[width=.39\linewidth]{figs/permutationWorst3} %& \includegraphics[width=.12\linewidth]{figs/permutationArtist}
   \\
@@ -56,6 +50,11 @@ Initial automatic suggestions & After fixing the stem to be green\\
 \label{fig:constrainedInference}
 \vspace{-1.0em}
 \end{figure*}
+
+Artists often draw inspiration from inspirational photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors to different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
+
+Figure~\ref{fig:photographMatching} shows an example where colors from two photographs are applied to different pattern templates. A color palette is first automatically extracted from the input photograph~\cite{SharonPaletteExtraction}. Our algorithm then automatically computes a pleasing mapping from the colors in the extracted palette to regions in a given pattern template.
+%~\remark{Comment on e.g. why does it use white for the background?} 
 
 Although using a well-designed color palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation} shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern using those palettes. These palettes were originally used by artists to color in this pattern on COLOURlovers. Because the pattern has 5 color groups, there are 120 possible color assignments for a given 5-color palette. Our model ranks the original artist-created color assignments as 39th (for the first palette) and 21st (for the second) out of the 120 permutations. Over a larger sampling of 188 patterns, artist-created colorings rank in the top 40\% overall, suggesting that the model captures general artist trends in pattern coloring. However, there may be stylistic variations between different artists that are not well predicted by a single model.
 
@@ -100,7 +99,7 @@ Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and 
 %\vspace{-1.0em}
 %\end{figure}
 
-\begin{figure}[t!]
+\begin{figure}[t]
 \begin{tabular}{cc}
 {\includegraphics[width=.1785\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
 {\includegraphics[width=.1785\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
@@ -115,7 +114,7 @@ Original&Suggestions\\
 
 Figure~\ref{fig:nearbySuggestions} shows two example scenarios where a proposed coloring is given and the model returns similar colorings. Here we choose $\sigma_\textrm{user}$ to be 10\% of the diagonal length of the \lab color space, and $w_\textrm{user}=3$, indicating a desire to remain fairly close to the original coloring. Our model generates numerous variations on the input coloring while still preserving its overall character.
 
-\begin{figure}[t!]
+\begin{figure}[t]
 \begin{tabular}{ccc} 
 Style&Example&Results\\ %\hline
 \raisebox{1.55em}{\emph{Light}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsLightExample2}&\includegraphics[width=.62\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
@@ -166,8 +165,11 @@ We also add a factor to the pattern's background color group that penalizes simi
 %%
 This term ensures that the body of the page does not blend into the patterned background. A more sophisticated approach would treat the entire web page as a pattern and perform joint recoloring; we leave this extension to future work.
 
+\paragraph{Fashion design}
+Our model can also adapt the colorings of clothing items to fit different people. Figure~\ref{fig:fashion} shows a shirt recolored to match different hair, eye, and skin tones. The hair, skin, eyes, and lips of the 3D person model were manually quantized to a single color; the resulting texture atlas functions as a recolorable pattern template. Fixing the colors of the hair, skin, eyes, and lips constrains the inference process to produce suitable colorings for a person with those physical attributes.
+%It should be possible to apply a similar procedure to photographic images, though those inputs may require an intrinsic image decomposition to separate shading from reflectance~\cite{IntrinsicImages}.
 
-\begin{figure}[t]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\columnwidth]{figs/webpageRecoloring}
 \caption{With a few additional factors, our model can recolor the background pattern of a web page to match the colors in the page body.}
@@ -180,6 +182,22 @@ Color-coordinating a virtual scene is another creative task that can benefit fro
 Recent related work transfers material properties from photographs to 3D scenes~\cite{MaterialStyleTransfer}; the objective functions used in this system could be adapted to soft constraints in our framework.
 %Our model's applicability to this task, despite it being trained only on \emph{2D} patterns, suggests that it captures some simple cross-domain aesthetic principles.
 
+
+\subsection{Performance}
+
+The time required to generate coloring suggestions varies depending on the visual complexity of the pattern. With the parallel tempering parameters described at the beginning of this section, it took 73.0s on average to retrieve 20 MMR-diversified results for a single input pattern on a 2.67GHz Intel Core i7. Running time is dominated by MCMC sampling, which on average accounts for 83\% of the total time.
+
+Real-time coloring suggestions would benefit many of the applications demonstrated in this paper, and there are several avenues for improving the performance of our unoptimized, JVM-based prototype to this end. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}.
+%Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\columnwidth]{figs/fashion/composite}
+\caption{Using our model to colorize a patterned shirt for different people. The hair, skin, eye, and lip colors are treated as fixed constraints, which encourage the model to produce compatible colorings via adjacencies and long-range dependencies.}
+\label{fig:fashion}
+\vspace{-1.0em}
+\end{figure}
+
 \begin{figure*}[ht]
 \begin{tabular}{c|ccc} 
 Original&Recoloring 1&Recoloring 2&Recoloring 3\vspace{0.4em}\\
@@ -191,22 +209,3 @@ Original&Recoloring 1&Recoloring 2&Recoloring 3\vspace{0.4em}\\
 \label{fig:sceneRecoloring}
 \vspace{-1.0em}
 \end{figure*}
-
-\paragraph{Fashion design}
-Our model can also adapt the colorings of clothing items to fit different people. Figure~\ref{fig:fashion} shows a shirt recolored to match different hair, eye, and skin tones. The hair, skin, eyes, and lips of the 3D person model were manually quantized to a single color; the resulting texture atlas functions as a recolorable pattern template. Fixing the colors of the hair, skin, eyes, and lips constrains the inference process to produce suitable colorings for a person with those physical attributes.
-%It should be possible to apply a similar procedure to photographic images, though those inputs may require an intrinsic image decomposition to separate shading from reflectance~\cite{IntrinsicImages}.
-
-\begin{figure}[ht!]
-\centering
-\includegraphics[width=\columnwidth]{figs/fashion/composite}
-\caption{Using our model to colorize a patterned shirt for different people. The hair, skin, eye, and lip colors are treated as fixed constraints, which encourage the model to produce compatible colorings via adjacencies and long-range dependencies.}
-\label{fig:fashion}
-\vspace{-1.0em}
-\end{figure}
-
-\subsection{Performance}
-
-The time required to generate coloring suggestions varies depending on the visual complexity of the pattern. With the parallel tempering parameters described at the beginning of this section, it took 73.0s on average to retrieve 20 MMR-diversified results for a single input pattern on a 2.67GHz Intel Core i7. Running time is dominated by MCMC sampling, which on average accounts for 83\% of the total time.
-
-Real-time coloring suggestions would benefit many of the applications demonstrated in this paper, and there are several avenues for improving the performance of our unoptimized, JVM-based prototype to this end. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}.
-%Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
